# Unsupervised-Domain-Adaptation-in-Medical-Imaging

./: README.md  pyproject.toml  requirements.txt  train_UDA.py
data/bmshare/: test.txt  train.txt  training_data.yaml  val.txt
data/bmshare/labels/test_coco_labels/: XGTkjnOprZYRmdc_test.xml  XHcUBojIFPfHoFs.xml  XHsBthZAGZeHXpa.xml  XIoKpbrFLzraoGs.xml  XJMMyhUcsmPPwJY.xml  XJUTNDqfkbuBxPI.xml  XJbvvNxRnVOZqkG.xml  XKVbNJZKVoNDrxv.xml  XLEMxLbSDfaFNzr.xml  XLXxbCMgxcENmHO.xml  XMWnzgCHfMRRSvE.xml  XNTUEpCMKgTUhEp.xml  XNsBTuTLtapXbaH.xml  XORbnttOEtJAwGD.xml  XPCrEsYenpwwZGy.xml  XQJdQqeaOQWbaof.xml  XQwpExOaEYefNlU_test.xml  XRcnMAivVCjawzl.xml  XSMDPxuBalpPnEq.xml  XSzeChxGSjaYosp.xml  XTMaqrmybKEQaUj.xml  XToOqZUKEHssVFy.xml  XUVgEXycZELLlyf.xml  XVRIeRXuQBnFHZW.xml  XVZbPCCqoSXYcBR.xml  XVxFGIUsRqKstSD.xml  XWavFYZSzNNKarb.xml  XXAjiXyjkjSlZVf.xml  XYBSitnUXxfkqAS.xml  XYgZnzEygQOnURX.xml  XYvltfOESkkfLOl.xml  XgLrwJgbgKNaMIj.xml  XgxxbtvLrtjakrM.xml  XhmLrOTUqBgKZiI.xml  XhxdPJaBjebFHcs.xml  XihAPcKcJewaWTE.xml  XjMcIPzfQZzWUXJ.xml  XjfFNWjpmRFppge.xml  XjrOHzcoZiHiRUP.xml  XkRgKuldRJHCONz_val.xml  (+434 more)
data/bmshare/labels/test_voc_labels/: XHcUBojIFPfHoFs.txt  XHsBthZAGZeHXpa.txt  XJMMyhUcsmPPwJY.txt  XJUTNDqfkbuBxPI.txt  XJbvvNxRnVOZqkG.txt  XLXxbCMgxcENmHO.txt  XMWnzgCHfMRRSvE.txt  XSMDPxuBalpPnEq.txt  XSzeChxGSjaYosp.txt  XTMaqrmybKEQaUj.txt  XToOqZUKEHssVFy.txt  (+100 more)
data/brats/: script.py  test.txt  train.txt  training_data.yaml  val.txt
utils/: utils_domain_dataset.py  utils_others.py  utils_preprocess_data.py  utils_train_loop.py  utils_uda_model.py
(+17290 files in other folders)
