[tool.poetry]
name = "script-py"
version = "0.1.0"
description = ""
authors = ["edstan <edigeorges50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
torchvision = "^0.22.0"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
scipy = "^1.15.3"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
